--- a/empnotification/empnotifications/Dockerfile
+++ b/empnotification/empnotifications/Dockerfile
@@ -1,2 +1,4 @@
 FROM nginx:alpine
 COPY . /usr/share/nginx/html
+
+#This Dockerfile instruction copies all files from the current directory (the build context) into the "/usr/share/nginx/html" directory of the NGINX container based on the "nginx:alpine" image.
