--- a/empnotification/empnotifications/client01/Dockerfile
+++ b/empnotification/empnotifications/client01/Dockerfile
@@ -2,3 +2,4 @@ FROM python:3.6.4-slim
 COPY . /client01
 CMD ["python","/client01/client1.py","c-subscriber_01"]
 EXPOSE 5000
+#This Dockerfile is based on the Python 3.6.4-slim image. It copies the current directory (.) into a directory called "client01" inside the container. It then sets the command to run the Python script "/client01/client1.py" with the argument "c-subscriber_01" when the container starts. Finally, it exposes port 5000 to allow external connections to the container.
