--- a/empnotification/empnotifications/server01/Dockerfile
+++ b/empnotification/empnotifications/server01/Dockerfile
@@ -2,3 +2,4 @@ FROM python:3.6.4-slim
 COPY . /server01
 CMD ["python","/server01/pub_sub_s1.py"]
 EXPOSE 5040
+#This code builds a Docker image from the Python 3.6.4-slim image, copies the current directory to a directory named "server01" within the image, sets the command to run a Python script named "pub_sub_s1.py" within the "server01" directory, and exposes port 5040.
